--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@slack/bolt": "^2.3.0",
     "chrono-node": "^2.1.8",
     "dotenv": "^8.2.0",
-    "honeybadger-js": "^2.2.2"
+    "honeybadger": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
