--- a/package.json
+++ b/package.json
@@ -4,17 +4,27 @@
   "description": "Translates times in slack with a message shortcut",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "nodemon --exec babel-node src/index.js --trace-warnings",
+    "clean": "rm -rf ./build",
+    "babel-build": "babel src --out-dir build --source-maps",
+    "build": "npm run clean; npm run babel-build",
+    "start": "node build/index.js"
   },
   "author": "lukec11 <me@lukec.me>",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
     "@slack/bolt": "^2.3.0",
     "chrono-node": "^2.1.8",
     "dotenv": "^8.2.0",
     "honeybadger": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/node": "^7.10.5",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "eslint": "^7.8.1",
     "nodemon": "^2.0.4"
   }
